# utpm

./: .editorconfig  .gitignore  .gitmodules  Cargo.toml  LICENSE  README.md  TODO.md  a  action.yml  build.rs  clippy.toml  flake.nix  justfile  rustfmt.toml
.cargo/: config.toml
.github/: copilot-instructions.md
.github/workflows/: ci.yml  pre-release.yml  release.yml  rust.yml
assets/: typst.toml.example
assets/docs/: book.typ  index.typ
assets/docs/templates/: ebook.typ  page.typ  template.typ
checksums/: all.txt
docs/: ACTION.md  CONTRIBUTING.md  DEVELOPMENT.md  GUIDE.md  PACKAGING.md  PUBLISHING.md  RELEASING.md  SECRETS.md  TESTING.md
packaging/aur/utpm-bin/: PKGBUILD
packaging/aur/utpm-git/: PKGBUILD
packaging/debian/: changelog  control  copyright  rules
packaging/fedora/: utpm.spec
packaging/flatpak/: io.github.typst_community.utpm.metainfo.xml  io.github.typst_community.utpm.yaml
packaging/homebrew/: utpm.rb
packaging/snap/: snapcraft.yaml
src/: args.rs  ci.rs  commands.rs  lib.rs  main.rs  portable.rs  utils.rs
src/commands/: add.rs  bulk_delete.rs  bump.rs  clone.rs  create.rs  delete.rs  generate.rs  get.rs  init.rs  install.rs  link.rs  list.rs  metadata.rs  package_path.rs  publish.rs  sync.rs  test.rs  tree.rs  unlink.rs
src/utils/: dryrun.rs  git.rs  macros.rs  output.rs  paths.rs  specs.rs  state.rs
tapes/: build.sh  bulk_delete.tape  create_cli.tape  create_i.tape  help.tape  install.tape  link.tape  list.tape  mkdir.tape  package_path.tape  packages-path.tape  tree.tape  unlink.tape
tapes/bulk_delete/: bulk_delete.tape
tapes/create_cli/: run.sh
tapes/create_i/: create_i.tape
tapes/install/: install.tape
tapes/link/: link.tape
tests/: command_tests.rs  integration_tests.rs  utils_tests.rs
tests/common/: mod.rs
