[package]
build = "build.rs"
name = "utpm"
version = "0.1.0"
edition = "2021"
description = "UTPM is a package manager for local and remote Typst packages. Quickly create and manage projects and templates on your system, and publish them directly to Typst Universe."
authors = ["Thomas QUEMIN <tquemin@thumus.eu>"]
documentation = "https://utpm.thumus.eu"
repository = "https://github.com/Thumuss/utpm"
license = "MIT"
keywords = ["typst", "packages"]
categories = ["command-line-utilities"]
exclude = ["/target", "/.github"]

[dependencies]
dirs = "6.0"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_with = "3.12"
toml = { version = "^0.8.20", features = ["display"] }
inquire = "0.7.5"
semver = { version = "1.0.25", features = ["serde"] }
spdx = { version = "0.10.8", features = ["text"] }
clap = { version = "4.5.29", features = ["derive"] }
git2 = "^0.20.0"
owo-colors = "4.1.0"
strum = { version = "0.27.0", features = ["derive"] }
typst-project = { git = "https://github.com/tingerrr/typst-project", rev = "8462942ef0c783acf339e715b5e24b2dba423de1" }
openssl = { version = "0.10", features = ["vendored"] }
tracing = { version = "0.1.41", features = ["attributes"] }
tracing-subscriber = "0.3.19"
clap_complete = "4.5.44"
shadow-rs = "0.38.1"
typst-kit = "0.12.0"
typst-syntax = "0.12.0"
regex = "1.11.1"

[build-dependencies]
shadow-rs = "0.38.1"

[[bin]]
name = "utpm"
path = "src/main.rs"
build = "build.rs"

[features]
default = ["full"]
nightly = []
full = ["workspace", "packages", "generate"]
add = ["install"]
bulk_delete = ["unlink"]
clone = ["dep:regex", "dep:git2", "dep:typst-syntax"]
init = ["dep:spdx", "dep:inquire"]
delete = []
generate = ["dep:clap_complete"]
install = ["link", "dep:git2"]
link = []
list = []
path = []
publish = ["dep:git2", "dep:octocrab", "dep:ignore", "dep:regex"]
tree = []
unlink = ["dep:inquire", "dep:regex"]
workspace = ["link", "init", "install", "add", "delete", "publish", "clone"]
packages = ["tree", "list", "path", "unlink", "bulk_delete"]


# For future dependencies check and other things, it will be usefull
# Reduce size
[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
