[package]
name = "utpm"
version = "0.3.0"
edition = "2024"
description = "UTPM is a package manager for local and remote Typst packages. Quickly create and manage projects and templates on your system, and publish them directly to Typst Universe."
authors = ["Thomas Daniel Guy QUEMIN <thomas.quemin@tuta.io>"]
repository = "https://github.com/typst-community/utpm"
license = "MIT"
keywords = ["typst", "packages"]
categories = ["command-line-utilities"]
exclude = ["/target", "/.github"]

[dependencies]
dirs = "6.0"
serde = { version = "1.0", features = ["derive"] }
toml = { version = "^0.8.22", features = ["display"] }
inquire = { version = "0.7.5" }
spdx = { version = "0.10.8", features = ["text"] }
clap = { version = "4.5.39", features = ["derive"] }
tracing = { version = "0.1.41", features = ["attributes"] }
tracing-subscriber = { version = "0.3.20", features = ["fmt", "std", "json"] }
clap_complete = { version = "4.5.51" }
shadow-rs = "1.1.1"
typst-kit = "0.14.2"
typst-syntax = "0.14.2"
regex = { version = "1.11.1" }
ignore = { version = "0.4.23" }
octocrab = { version = "0.44.1" }
tokio = { version = "1.45.1", features = ["full"] }
tokio-macros = "2.5.0"
url = "2.5.4"
once_cell = "1.21.3"
thiserror = "2.0.12"
anyhow = "1.0.98"
serde_yaml = { version = "0.9.34", optional = true }
serde_json = { version = "1.0.140", optional = true }
serde-hjson = { version = "1.1.0", optional = true }
fmt-derive = "0.1.2"
ptree = "0.5.2"
reqwest = { version = "0.12.22", optional = false, features = ["json"] }
itertools = "0.14.0"
toml_edit = "0.23.3"
ecow = "0.2"

[dev-dependencies]
tempfile = "3.15"

[build-dependencies]
shadow-rs = "1.1.1"

[[bin]]
name = "utpm"
path = "src/main.rs"

[lib]
name = "utpm"
path = "src/lib.rs"

[features]
#### Output format
output_json  = ["dep:serde_json"]
output_yaml  = ["dep:serde_yaml"]
output_hjson = ["dep:serde-hjson"]
full_output = ["output_json", "output_hjson", "output_yaml"]
default = ["output_json"]

# Reduce size and optimize performance
[profile.release]
strip = true           # Strip symbols from binary
opt-level = "z"        # Optimize for size
lto = true             # Enable Link Time Optimization
codegen-units = 1      # Better optimization, slower compile
panic = "abort"        # Reduce panic handling overhead
overflow-checks = false # Disable integer overflow checks in release
